#APPEALS-63389 - added width class to prevent text wrapping

--- a/client/app/styles/queue/_correspondence.scss
+++ b/client/app/styles/queue/_correspondence.scss
@@ -1995,3 +1995,7 @@ $color-bg-hsl-a: hsl(0, 0%, 80%);
 .back-button {
 margin-left: 240px;
 }
+
+th.notes-column {
+  width: 25%;
+}
